# rootski

./: .all-contributorsrc  .gitattributes  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CONTRIBUTORS.md  LICENSE.txt  README.md  README.rst  _docker-compose.yml  activation.txt  bitbucket-pipelines.yml  dev.env  docker-compose.dev-logging.yml  docker-compose.le.yaml  docker-compose.traefik-labels.yml  docker-compose.yml  ecs-anywhere-install.sh  make.xsh  makefile  onboard.sh  prod.env
.dvc/: config
.github/workflows/: docs.yml  rootski-ci.yml
archived/: README.md  README_from_terraform_deployment.md  _make.xsh
docs/: Dockerfile  Makefile  aws_invalidate_stack.py  docker-compose.yml  requirements.txt
docs/source/: .gitignore  conf.py  iac-reference.rst  index.md  index.rst  rootski-api-reference.rst  spinning-up-rootski-from-scratch.txt
dynamo-db/: .gitignore  setup.cfg  setup.py
dynamo-db/src/dynamodb_play/: dynamo.py  play.py
dynamo-db/src/dynamodb_play/actions/: morpheme.py  word.py
dynamo-db/src/dynamodb_play/etl/: __init__.py  breakdowns.py  db_service.py  morphemes.py  utils.py  words.py  words_for_search.py
dynamo-db/src/dynamodb_play/models/: base.py  breakdown.py  breakdown_item.py  morpheme.py  morpheme_family.py  word.py  word_for_search.py
dynamo-db/tests/: conftest.py
dynamo-db/tests/fixtures/: rootski_dynamo_table.py
dynamo-db/tests/unit_tests/actions/: test__morpheme.py  test__word.py
infrastructure/clickup/: .gitignore  README.md  api-key.example.txt  clickup.py  created-tasks.json  makefile  parse_markdown_tasks.py  requirements.txt  users.json
infrastructure/vpn/: README.md  docker-compose.yml  run.sh
linting/: .flake8  .pylintrc
make_utils/: Makefile  README.rst  docker.xsh  makefile.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  utils_with_dependencies.py  utils_without_dependencies.py  xsh_utils.xsh
make_utils/src/make_utils/: makefile.py  utils_with_dependencies.py  utils_without_dependencies.py  xsh_utils.xsh
ml_pipeline/collect_model_data/: collect_model_data.py
rootski_api/: .coveragerc  .dockerignore  .env  .gitignore  .pre-commit-config.yaml  AUTHORS.rst  CHANGELOG.rst  Dockerfile  LICENSE.txt  Makefile  README.rst  docker-compose.yml  make.xsh  requirements.txt  setup.cfg  setup.py
rootski_api/migrations/: README.rst  alembic.ini  make.xsh  makefile  setup.cfg
rootski_api/migrations/initial_data/: gather_data.py  parse_yandex_data.py  scrape_yandex_data.py
rootski_api/migrations/initial_data/data/: .gitattributes  .gitignore  breakdown-items.csv.dvc  breakdowns-raw.csv.dvc  conjugations.csv.dvc  family_meanings_v1.csv.dvc  morphemes_v3.csv.dvc  nouns.csv.dvc  sentences.csv.dvc  word-to-breakdown.csv.dvc  word_defs.csv.dvc  words.csv.dvc
rootski_api/migrations/migrations/initial_data/: gather_data.py
rootski_api/migrations/migrations/initial_data/data/: translations.csv.dvc
rootski_api/migrations/migrations/rootski_db/versions/: 2_create_tables.py  3_seed_database.py
rootski_api/migrations/migrations/utils/: alembic_x_args.py
rootski_api/migrations/rootski_db/: env.py
rootski_api/migrations/rootski_db/versions/: 01edfd407a46_create_tables.py  6e442c999465_start.py  c312f8c10ddd_seed_database.py
rootski_api/migrations/src/migrations/initial_data/: gather_data.py  initial_models.py
rootski_api/migrations/src/migrations/initial_data/data/: Untitled.ipynb  definition_contents.csv.dvc  verb_pairs.csv.dvc  word_to_breakdown.csv.dvc
rootski_api/migrations/src/migrations/rootski_db/: env.py
rootski_api/migrations/src/migrations/rootski_db/versions/: 1_start.py  2_create_tables.py  3_seed_database.py
rootski_api/migrations/src/migrations/utils/: alembic_x_args.py  get_new_revision_id.py
rootski_db_migrations/: .dockerignore  Dockerfile  alembic.ini  make.xsh  makefile  setup.cfg  setup.py
rootski_frontend/: .pre-commit-config.yaml  Dockerfile  docker-compose.yml  package-lock.json  package.json
rootski_model/: .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  MLproject  docker-compose.yml  mlflow-demo.py  requirements.txt  setup.py  setup_env.sh  test.py
(+400 files in other folders)
