[metadata]
name = dynamodb_play
author = Eric Riddoch
author_email = eric.riddoch@gmail.com
home_page = https://api.rootski.io/
description = Backend API for Rootski.io
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
license = Proprietary
keywords = <Add keywords here>
project_urls =
    Documentation = some.documentation.url
    Source = some.github.url

# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 3 - Beta
    Intended Audience :: All Developers
    Natural Language :: English
    Topic :: Software Development :: Common :: Tool
    License :: Other/Proprietary License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
zip_safe = False
package_dir=
    =src
packages = find:
include_package_data = True
test_suite = tests/unit_tests
python_requires =  >= 3.7.*
# python_requires =  >= 3.9.*
install_requires =
    importlib-metadata
    SQLAlchemy
    pandas
    psycopg2-binary
    pydantic[email]
    boto3


[options.extras_require]
test =
    pytest
    pytest-runner
    pytest-cov
    authlib
    boto3
    python-dotenv
    moto[dynamodb]
lint =
    pylint==2.11.1
    flake8
    black
    radon
    isort
dev =
    rich
    mypy
    boto3-stubs[essential]
    jupyterlab
    %(test)s
    %(lint)s

# Remove this option and the projects cli folder if the
# project has no command line interface
# [options.entry_points]
# console_scripts =
#     rootski = rootski.cli.rootski_cli:main

[options.packages.find]
where=src
exclude =
    tests

[bdist_wheel]
universal = true

[check]
metadata = true
restructuredtext = true
strict = true

[sdist]
formats = zip, gztar

[pyscaffold]
version = 4.0.2
package = rootski

[tool:pytest]
markers =
    foundational: Tests that must pass for subsequent tests to run.
    slow: Tests that take a long time to execute
