[metadata]
name = make_utils
author = Eric Riddoch
author_email = eric.riddoch@gmail.com
home_page = https://docs.rootski.io/
description = Utilities for working with xonsh and makefiles for python
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
license = Proprietary

# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 3 - Beta
    Intended Audience :: All Developers
    Natural Language :: English
    Topic :: Software Development :: Common :: Tool
    License :: Other/Proprietary License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
zip_safe = False
package_dir=
    =src
packages = find:
include_package_data = True
test_suite = tests/unit_tests
python_requires =  >= 3.7.*
# python_requires =  >= 3.9.*
install_requires =
    rich
    xonsh

[options.packages.find]
where=src
exclude =
    tests

[bdist_wheel]
universal = true

[check]
metadata = true
restructuredtext = true
strict = true

[sdist]
formats = zip, gztar

[pyscaffold]
version = 4.0.2
package = make_utils
