[metadata]
name = migrations
author = Eric Riddoch
author_email = eric.riddoch@gmail.com
home_page = https://api.rootski.io/
description = Backend API for Rootski.io
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
license = Proprietary

[options]
zip_safe = False
package_dir=
    =migrations
packages = find:
include_package_data = True
test_suite = tests/unit_tests
python_requires =  >= 3.7.*
# python_requires =  >= 3.9.*
install_requires =
    pandas
    sqlalchemy
    psycopg2-binary
    alembic

# [options.packages.find]
# where=src

[bdist_wheel]
universal = true

[check]
metadata = true
restructuredtext = true
strict = true

[sdist]
formats = zip, gztar
